--- a/app/Resources/views/Default/threeColumn.html.twig
+++ b/app/Resources/views/Default/threeColumn.html.twig
@@ -1,4 +1,5 @@
-{% extends "OroUIBundle:Default:index.html.twig" %}
+{% extends "OroUIBundle:Default:threeColumn.html.twig" %}
+{% use ':Default:components.html.twig' %}
 
 {% block head_script %}
     {{ parent() }}
@@ -8,9 +9,4 @@
 {% block head_style %}
     {{ parent() }}
     {{ block('head_style_component') }}
-{% endblock %}
-
-{% block main %}
-    {{ parent() }}
-    {{ oro_windows_restore() }}
 {% endblock %}
